--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documento sin t&iacute;tulo</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <h1>Proyrcto empresarial</h1>
 </body>
 </html>
