--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Proyrcto empresarial</h1>
     <p>P&aacute;rrafo de ejemplo</p>
+    <p>P&aacute;rrafo agregado</p>
 </body>
 </html>
