--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Proyrcto empresarial</h1>
+    <h1>Proyecto empresarial</h1>
     <p>P&aacute;rrafo de ejemplo</p>
     <p>P&aacute;rrafo agregado</p>
 </body>
