--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento sin t&iacute;tulo</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <script src="js/scripts.js"></script>
 </head>
 <body>
     <h1>Proyecto empresarial</h1>
     <p>P&aacute;rrafo de ejemplo</p>
     <p>P&aacute;rrafo agregado</p>
+    <input type="button" onclick="saludo()" value="Dale ya!">
 </body>
 </html>
